--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
 <head>
 <title>Ziviles Cernauskienes svetaine</title>
+  <style>
+    body {
+     background-color: #000;
+      color: #fff;
+      font-size: 30px;
+    }
+  </style>
 </head>
 <body>
 Sveiki atvyke!
