taisiau ir suklydau

--- a/2nd.html
+++ b/2nd.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="secnd">
-        <h1>Sveiki atvyke i antra puslapi</h1>
-        <a href="index.html">Mano Pirmas puslapis</a>
-        <button onclick="index()">Pirmas puslapis</button>
-        <a href="3rd.html">Mano Trecias puslapis</a>
-        <button onclick="trecias()">Trecias puslapis</button>
+        <h1>Squares are all around</h1>
+        <a href="index.html">Home page</a>
+        <button onclick="index()">Home</button>
+        <a href="3rd.html">See IF you are smart enough</a>
+        <button onclick="trecias()">Are you smart?</button>
     </div>
     <div class="keturimygtukai">
         <button>vienas</button>
