--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <div class="index">
-    <h1>Sveiki atvyke i pirma puslapi</h1>
-    <a href="2nd.html">Mano antras puslapis</a>
-    <button onclick="antras()">Antras puslapis</button>
-    <a href="3rd.html">Mano trecias puslapis</a>
-    <button onclick="trecias()">Trecias puslapis</button>
+    <h1>Welcome</h1>
+    <a href="2nd.html">Find some squares</a>
+    <button onclick="antras()">Squares to see</button>
+    <a href="3rd.html">See IF you are smart enough</a>
+    <button onclick="trecias()">Are you smart????</button>
 
 </div>
 
