istaisyta klaida Aciu Rimai

--- a/3rd.html
+++ b/3rd.html
@@ -26,36 +26,45 @@
 
             <div>
                 <input type="radio" id="kl1taip" name="kl1">
-                <label for="kl1taip">30,5 days</label></div>
+                <label for="kl1taip">30,5 days</label>
+            </div>
+
             <div>
                 <input type="radio" name="kl1" id="ne1">
-                <label for="ne1">10,5 days</label></div>
+                <label for="ne1">10,5 days</label>
+            </div>
 
             <button onclick="funk1()"> Next</button>
         </div>
 
         <div class="KL2">
-            <form id="kl2">
-                <p>Who is the author of "The shining"</p>
-                <div>
-                    <input type="radio" id="kl2taip" name="kl2">
-                    <label for="kl2taip">Steven King</label></div>
-                <div>
-                    <input type="radio" name="kl2" id="kl2ne">
-                    <label for="kl2ne">Me</label></div>
 
-                <button onclick="funk2()">Next</button>
+            <p>Who is the author of "The shining"</p>
+            <div>
+                <input type="radio" id="kl2taip" name="kl2">
+                <label for="kl2taip">Steven King</label>
+            </div>
+
+            <div>
+                <input type="radio" name="kl2" id="kl2ne">
+                <label for="kl2ne">Me</label>
+            </div>
+
+            <button onclick="funk2()">Next</button>
         </div>
 
         <div class="KL3">
 
             <p>Who lives undergound?</p>
+            <div>
+                <input type="radio" id="kl3taip" name="kl3">
+                <label for="kl3taip">Mole</label>
+            </div>
 
-            <input type="radio" id="kl3taip" name="kl3">
-            <label for="kl3taip">Mole</label>
-
-            <input type="radio" name="kl3" id="kl3ne">
-            <label for="kl3ne">Parrot</label>
+            <div>
+                <input type="radio" name="kl3" id="kl3ne">
+                <label for="kl3ne">Parrot</label>
+            </div>
 
 
             <button onclick="funk3()">Next</button>
@@ -64,12 +73,15 @@
         <div class="KL4">
             <form>
                 <p>What is the main video chanel used globally?</p>
+                <div>
+                    <input type="radio" id="kl4taip" name="kl4">
+                    <label for="kl4taip">Yuotube.com</label>
+                </div>
 
-                <input type="radio" id="kl4taip" name="kl4">
-                <label for="kl4taip">Yuotube.com</label>
-
-                <input type="radio" name="kl4" id="kl4ne">
-                <label for="kl4ne">Delfi.lt</label>
+                <div>
+                    <input type="radio" name="kl4" id="kl4ne">
+                    <label for="kl4ne">Delfi.lt</label>
+                </div>
 
             </form>
             <button onclick="funk4()">Next</button>
@@ -82,6 +94,7 @@
             <div><label for="kl5taip">Apple</label>
                 <input type="radio" id="kl5taip" name="kl5">
             </div>
+
             <div><label for="kl5ne">Banana</label>
                 <input type="radio" name="kl5" id="kl5ne">
             </div>
@@ -99,7 +112,9 @@
             <h1>Congratulations</h1>
             <p>You are a very smart person and now you can see some awesome stuff just here:</p>
 
-            <div class="Kubikas"></div>
+            <div class="Kubikas">
+                <p>Awesome stuff coming soon</p>
+            </div>
 
         </div>
 
