naujas index pagal padaryta portfolio
padarytas portfolio darbas, gradientai, mygtukai, klausimynas

--- a/index.html
+++ b/index.html
@@ -5,19 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="stiliaiindex.css">
 </head>
-<div class="index">
-    <h1>Welcome</h1>
-    <a href="2nd.html">Find some squares</a>
-    <button onclick="antras()">Squares to see</button>
-    <a href="3rd.html">See IF you are smart enough</a>
-    <button onclick="trecias()">Are you smart????</button>
-
-</div>
 
 <body>
+    <div class="div1">
+        <h1>Sveiki atvykę į mano puslapį</h1>
+        <p>Čia rasite visus mano sukurtus darbus, kuriuos atlikau su HTML, CSS ir JS. Kopijuoti puslapiai, įvairios užduotys ir panašiai</p>
+    </div>
+
+    <div class="links">
+        <a href="ziema.html" title="Žiemiškas puslapis"><img src="https://2.bp.blogspot.com/-SUMDIuZ7m48/TeWj1YDWcNI/AAAAAAAABhg/9fjPiDZHwms/s" width="200px" height="100px"></a>
+
+        <a href="beach.html" title="Vasariškas puslapis"><img src="https://traversymedia.com/downloads/assets/beachshowcase.jpg" alt="Vasariškas puslapis" width="200 px" height="100px"></a>
+        <a href="klausimynas.html"><img src="klausimynas.PNG" alt="Klausimynas" width="200 px" height="100px"></a>
+    </div>
+
+
+
+
+
+
+
+
+
 
 </body>
 <script src="script.js"></script>
